--- a/index.html
+++ b/index.html
@@ -1,79 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Source.One App</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script>
-            const APP_URLS = {
-                // android:
-                //     "https://play.google.com/store/apps/details?id=com.sourceone.buyer",
-                android: "market://details?id=com.sourceone.buyer",
-                ios: "https://apps.apple.com/in/app/source-one/id6443432457",
-                default: "https://buyer-app.source.one",
-            };
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Source.One App</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      const APP_URLS = {
+        // android:
+        //     "https://play.google.com/store/apps/details?id=com.sourceone.buyer",
+        android: "market://details?id=com.sourceone.buyer",
+        ios: "https://apps.apple.com/in/app/source-one/id6443432457",
+        default: "https://buyer-app.source.one",
+      };
 
-            function getURL() {
-                if (navigator.userAgent.indexOf("Android") !== -1) {
-                    return APP_URLS.android;
-                }
+      function getURL() {
+        if (navigator.userAgent.indexOf("Android") !== -1) {
+          return APP_URLS.android;
+        }
 
-                if (
-                    navigator.userAgent.indexOf("iPhone") !== -1 ||
-                    navigator.userAgent.indexOf("iPad") !== -1
-                ) {
-                    return APP_URLS.ios;
-                }
+        if (
+          navigator.userAgent.indexOf("iPhone") !== -1 ||
+          navigator.userAgent.indexOf("iPad") !== -1
+        ) {
+          return APP_URLS.ios;
+        }
 
-                return APP_URLS.default;
-            }
+        return APP_URLS.default;
+      }
 
-            function getAppIntentLink() {
-                if (navigator.userAgent.indexOf("Android") !== -1) {
-                    return "sourceonebuyerapp://app.source.one";
-                }
-                return "";
-            }
+      function getAppIntentLink() {
+        if (navigator.userAgent.indexOf("Android") !== -1) {
+          return "sourceonebuyerapp://app.source.one";
+        }
+        return "";
+      }
 
-            function handleDeepLink() {
-                const appLink = getAppIntentLink();
-                const start = new Date().getTime();
-                const timeout = 2000;
+      function handleDeepLink() {
+        const appLink = getAppIntentLink();
+        const start = new Date().getTime();
+        const timeout = 2000;
 
-                if (appLink) window.location = appLink;
+        if (appLink) window.location = appLink;
 
-                setTimeout(() => {
-                    const end = new Date().getTime();
-                    if (end - start < timeout + 100) {
-                        const autoRedirectUrl = getURL();
-                        if (autoRedirectUrl)
-                            window.location.href = autoRedirectUrl;
-                    }
-                }, timeout);
-            }
+        console.log("Redirecting to Source.One App -> " + appLink);
+        console.log("current url -> " + currentUrl);
+        console.log("getURL -> " + getURL());
 
-            window.onload = handleDeepLink;
-        </script>
-    </head>
-    <body class="bg-gray-100">
-        <div class="container mx-auto p-4" id="redirectionMsg">
-            <div class="bg-white rounded-lg shadow-lg p-6">
-                <div class="text-center mt-4">
-                    <img src="assets/img.jpg" alt="" class="w-60 mx-auto" />
-                </div>
-                <div class="text-center text-gray-600">
-                    <p class="mb-4 font-medium">
-                        Click here if you're not redirected automatically...
-                    </p>
-                    <button
-                        onclick="handleDeepLink()"
-                        class="bg-blue-500 text-white rounded-full py-2 px-4 w-80"
-                    >
-                        Continue to app
-                    </button>
-                </div>
-            </div>
+        setTimeout(() => {
+          const end = new Date().getTime();
+          if (end - start < timeout + 100) {
+            const autoRedirectUrl = getURL();
+            if (autoRedirectUrl) window.location.href = autoRedirectUrl;
+          }
+        }, timeout);
+      }
+
+      window.onload = handleDeepLink;
+    </script>
+  </head>
+  <body class="bg-gray-100">
+    <div class="container mx-auto p-4" id="redirectionMsg">
+      <div class="bg-white rounded-lg shadow-lg p-6">
+        <div class="text-center mt-4">
+          <img src="assets/img.jpg" alt="" class="w-60 mx-auto" />
         </div>
-    </body>
+        <div class="text-center text-gray-600">
+          <p class="mb-4 font-medium">
+            Click here if you're not redirected automatically...
+          </p>
+          <button
+            onclick="handleDeepLink()"
+            class="bg-blue-500 text-white rounded-full py-2 px-4 w-80"
+          >
+            Continue to app
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
