chore: Update deep link to Source.One domain and add current URL logging

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
         if (appLink) window.location = appLink;
 
+        const currentUrl = window.location;
         console.log("Redirecting to Source.One App -> " + appLink);
         console.log("current url -> " + currentUrl);
         console.log("getURL -> " + getURL());
