chore: Update deep link to Source.One domain and improve URL logging

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       function getAppIntentLink() {
         if (navigator.userAgent.indexOf("Android") !== -1) {
-          return "sourceonebuyerapp://app.source.one";
+          return "sourceonebuyerapp://source-bdl.netlify.app";
         }
         return "";
       }
